Changelogs: - Salvato il server da azioni di distruzione indiscriminata. - Usare language level 24 se i Record non sono riconosciuti. - Aggiunti dei Record per il client, in caso servissero. - NON CONNETTERSI DIRETTAMENTE AL DATABASE DAL CLIENT, è insicuro e può esporre le credenziali. - Minori modifiche.